deployment/cfn-hetero-scale.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/awslabs/goformation/master/schema/cloudformation.schema.json

AWSTemplateFormatVersion: "2010-09-09"
Description: "Template for deploying parking management fastapi project to ECS"

Parameters:
  DesiredCount:
    Type: Number
    Default: 1
    Description: "Number of desired ECS tasks"
  Subnets:
    Type: List<AWS::EC2::Subnet::Id>
    Description: "List of Subnet IDs for ECS tasks"
    Default: subnet-0270635e743726ff8,subnet-0b31ae9efb5f34921,subnet-085cf231024321541
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: "VPC ID for ECS tasks"
    Default: vpc-0e26374029bc79bed
  DynamoTableArn:
    Type: String
    Description: "ARN of the DynamoDB table the task needs to access"
    Default: arn:aws:dynamodb:ap-south-1:513758042129:table/parking-management-test
  CertificateArn:
    Type: String
    Description: "ARN of the ACM certificate for the ALB"
    Default: arn:aws:acm:ap-south-1:513758042129:certificate/1efd4492-31b3-48af-b04d-ba5c731543fd
  HostedZoneId:
    Type: String
    Description: "ID of Hosted Zone in which we are deploying"
    Default: Z04882262Z8WPNRFIWJUE
  HostedZoneUrl:
    Type: String
    Description: Desired url for backend
    Default: 1337park-alb.kaushiksaha.me
  ECSAMI:
    Description: The Amazon Machine Image ID used for the cluster
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ecs/optimized-ami/amazon-linux-2023/arm64/recommended/image_id

Resources:
  ParkingManagementLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/ecs/${AWS::StackName}-logs"
      RetentionInDays: 7

  ParkingManagementTask:
    Type: AWS::ECS::TaskDefinition
    DependsOn:
      - ParkingManagementTaskRole
    Properties:
      NetworkMode: awsvpc
      ContainerDefinitions:
        - Image: 513758042129.dkr.ecr.ap-south-1.amazonaws.com/parking-management-py:1.0.7
          Name: !Sub ${AWS::StackName}-parking-management-image
          Essential: true
          PortMappings:
            - ContainerPort: 8000
              Protocol: tcp
              Name: parking-management-tcp-port
          HealthCheck:
            Command:
              ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
            StartPeriod: 60
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref ParkingManagementLogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: api

      Cpu: .5 vCPU
      Memory: 1 GB
      Family: !Sub "${AWS::StackName}-family"
      ExecutionRoleArn: arn:aws:iam::513758042129:role/ecsTaskExecutionRole
      TaskRoleArn: !GetAtt ParkingManagementTaskRole.Arn
      RuntimePlatform:
        OperatingSystemFamily: LINUX
        CpuArchitecture: ARM64
      RequiresCompatibilities:
        - FARGATE
        - EC2

  ParkingManagementTaskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Path: "/"
      Policies:
        - PolicyName: !Sub "${AWS::StackName}-dynamodb-access"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - dynamodb:GetItem
                  - dynamodb:PutItem
                  - dynamodb:UpdateItem
                  - dynamodb:DeleteItem
                  - dynamodb:BatchGetItem
                  - dynamodb:BatchWriteItem
                  - dynamodb:Query
                  - dynamodb:Scan
                  - dynamodb:DescribeTable
                Resource:
                  - !Ref DynamoTableArn
                  - !Sub "${DynamoTableArn}/index/*"

  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: !Sub "${AWS::StackName}-dynamodb-access"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - dynamodb:GetItem
                  - dynamodb:PutItem
                  - dynamodb:UpdateItem
                  - dynamodb:DeleteItem
                  - dynamodb:BatchGetItem
                  - dynamodb:BatchWriteItem
                  - dynamodb:Query
                  - dynamodb:Scan
                  - dynamodb:DescribeTable
                Resource:
                  - !Ref DynamoTableArn
                  - !Sub "${DynamoTableArn}/index/*"
      ManagedPolicyArns:
        # See reference: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/security-iam-awsmanpol.html#security-iam-awsmanpol-AmazonEC2ContainerServiceforEC2Role
        - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
        # This managed policy allows us to connect to the instance using SSM
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref EC2Role

  ContainerHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the EC2 hosts that run containers
      VpcId:
        Ref: VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          SourceSecurityGroupId: !Ref ParkingManagementALBSG
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0

  EC2LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    DependsOn:
      - ParkingManagementCluster
    Properties:
      LaunchTemplateData:
        ImageId: !Ref ECSAMI
        InstanceType: t4g.small
        IamInstanceProfile:
          Name: !Ref EC2InstanceProfile
        SecurityGroupIds:
          - !Ref ContainerHostSecurityGroup
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            echo "ECS_CLUSTER=${AWS::StackName}-cluster" >> /etc/ecs/ecs.config
          # Fn::Base64: !Sub |
          #   #!/bin/bash -xe
          #    echo ECS_CLUSTER=${ParkingManagementCluster} >> /etc/ecs/ecs.config
          #    yum install -y aws-cfn-bootstrap
          #    /opt/aws/bin/cfn-init -v --stack ${AWS::StackId} --resource ContainerInstances --configsets full_install --region ${AWS::Region} &
        MetadataOptions:
          HttpEndpoint: enabled

  DynamoDBVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: "Gateway"
      VpcId: !Ref VpcId
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.dynamodb"
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: "*"
            Action:
              - "dynamodb:*"
            Resource:
              - !Ref DynamoTableArn
              - !Sub "${DynamoTableArn}/index/*"
      RouteTableIds:
        - rtb-0aa43051321d46638

  EC2ASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MaxSize: "1"
      MinSize: "1"
      AutoScalingGroupName: !Sub ${AWS::StackName}-asg
      DesiredCapacity: "1"
      VPCZoneIdentifier: !Ref Subnets
      LaunchTemplate:
        Version: !GetAtt EC2LaunchTemplate.LatestVersionNumber
        LaunchTemplateId: !Ref EC2LaunchTemplate

  EC2CapacityProvider:
    Type: AWS::ECS::CapacityProvider
    Properties:
      AutoScalingGroupProvider:
        AutoScalingGroupArn: !GetAtt EC2ASG.AutoScalingGroupARN

  ParkingManagementCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub "${AWS::StackName}-cluster"

  ParkingManagementECSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow incoming traffic from ALB
      # GroupName: ParkingManagementECS-SG
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          SourceSecurityGroupId: !Ref ParkingManagementALBSG
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0

  ParkingManagementALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow incoming http traffic
      # GroupName: ParkingManagementALB-SG
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
        - IpProtocol: tcp
          CidrIpv6: ::/0
          FromPort: 80
          ToPort: 80
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 443
          ToPort: 443
        - IpProtocol: tcp
          CidrIpv6: ::/0
          FromPort: 443
          ToPort: 443
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
        - IpProtocol: "-1"
          CidrIpv6: ::/0

  ParkingManagementServiceEC2:
    Type: AWS::ECS::Service
    DependsOn: ParkingManagementHTTPListener
    Properties:
      Cluster: !GetAtt ParkingManagementCluster.Arn
      LaunchType: EC2
      # CapacityProviderStrategy:
      #   - CapacityProvider: !Ref EC2CapacityProvider
      #     Weight: 1
      ServiceName: !Sub "${AWS::StackName}-service-ec2"
      NetworkConfiguration:
        AwsvpcConfiguration:
          SecurityGroups:
            - !Ref ParkingManagementECSSG
          Subnets: !Ref Subnets
      TaskDefinition: !Ref ParkingManagementTask
      DesiredCount: 1
      LoadBalancers:
        - ContainerName: !Sub ${AWS::StackName}-parking-management-image
          ContainerPort: 8000
          TargetGroupArn: !Ref ParkingManagementTargetGroup

  ParkingManagementService:
    Type: AWS::ECS::Service
    DependsOn: ParkingManagementHTTPListener
    Properties:
      Cluster: !GetAtt ParkingManagementCluster.Arn
      LaunchType: FARGATE
      ServiceName: !Sub "${AWS::StackName}-service"
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref ParkingManagementECSSG
          Subnets: !Ref Subnets
      TaskDefinition: !Ref ParkingManagementTask
      DesiredCount: 0
      LoadBalancers:
        - ContainerName: !Sub ${AWS::StackName}-parking-management-image
          ContainerPort: 8000
          TargetGroupArn: !Ref ParkingManagementTargetGroup

  ParkingManagementALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "${AWS::StackName}-alb"
      Scheme: internet-facing
      Subnets: !Ref Subnets
      SecurityGroups:
        - !Ref ParkingManagementALBSG

  ParkingManagementTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${AWS::StackName}-tg"
      Port: 8000
      Protocol: HTTP
      HealthCheckEnabled: true
      HealthCheckPath: /health
      VpcId: !Ref VpcId
      TargetType: ip

  ParkingManagementHTTPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ParkingManagementALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ParkingManagementTargetGroup
      # DefaultActions:
      #   - Type: redirect
      #     RedirectConfig:
      #       Protocol: HTTPS
      #       Port: "443"
      #       StatusCode: HTTP_301
      #       Host: "#{host}"
      #       Path: "/#{path}"
      #       Query: "#{query}"

  # ParkingManagementHTTPSListener:
  #   Type: AWS::ElasticLoadBalancingV2::Listener
  #   Properties:
  #     LoadBalancerArn: !Ref ParkingManagementALB
  #     Port: 443
  #     Protocol: HTTPS
  #     Certificates:
  #       - CertificateArn: !Ref CertificateArn
  #     DefaultActions:
  #       - Type: forward
  #         TargetGroupArn: !Ref ParkingManagementTargetGroup

  ParkingManagementScalableTarget:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MaxCapacity: 3
      MinCapacity: 0
      ResourceId: !Sub
        - service/${ClusterName}/${ServiceName}
        - ClusterName: !Ref ParkingManagementCluster
          ServiceName: !GetAtt ParkingManagementService.Name
      RoleARN: arn:aws:iam::513758042129:role/ApplicationAutoScalingECSRole
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs

  ParkingManagementScalingPolicy:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: ParkingManagementRequestCountScalingPolicy
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref ParkingManagementScalableTarget
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ALBRequestCountPerTarget
          ResourceLabel: !Sub ${ParkingManagementALB.LoadBalancerFullName}/${ParkingManagementTargetGroup.TargetGroupFullName}
        TargetValue: 3
        ScaleInCooldown: 60
        ScaleOutCooldown: 60
